--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -1,6 +1,7 @@
 $color-white : #fdfdfd;
 $color-black : #000000;
 $color-blue : #1e90ff;
+$color-green : #50A584;
 $color-grey : #383838;
 
 $ease-in-out: cubic-bezier(0.77, 0, 0.175, 1);
