--- a/src/scss/shared/_utils.scss
+++ b/src/scss/shared/_utils.scss
@@ -1,7 +1,7 @@
-.u-color-bright-orange {
-    color: $color-bright-orange;
+.u-color-blue {
+    color: $color-blue;
 }
 
-.u-color-pure-blue {
-    color: $color-pure-blue;
+.u-color-grey {
+    color: $color-grey;
 }
