--- a/src/app/shared/components/album-banner/album-banner.component.scss
+++ b/src/app/shared/components/album-banner/album-banner.component.scss
@@ -2,27 +2,77 @@
 
 .album-banner{
     &--container{
-        margin: 0 15rem;
+        padding: 15rem;
         display: flex;
         align-items: center;
+        justify-content: flex-start;
         color : $color-white;
+
+        @media screen and (max-width: 1439px) {
+            padding : 8rem;
+        }
+
+        @media screen and (max-width: 1023px) {
+            padding : 4rem;
+        }
+
+        @media screen and (max-width: 796px) {
+            padding: 2rem;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: center;
+        }
     }
 
     &--details{
         margin-left: 10rem;
-        flex: 1;
+        flex: 1 0;
+
+        @media screen and (max-width: 1439px) {
+            margin-left : 7rem;
+        }
+
+        @media screen and (max-width: 1023px) {
+            margin-left : 4rem;
+        }
+
+        @media screen and (max-width: 796px) {
+            flex-direction: column;
+            justify-content: center;
+            margin-left: 0;
+            margin-top: 2rem;
+        }
     }
 
     &--title{
         font-size: 6rem;
+        font-weight: 600;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: #F1F1F1;
         -webkit-text-fill-color: transparent;
+        @media screen and (max-width: 1439px) {
+            font-size: 5rem;
+        }
+
+        @media screen and (max-width: 1023px) {
+            font-size: 4rem;
+        }
+
+        @media screen and (max-width: 1023px) {
+            font-size: 2rem;
+        }
     }
 
     &--artist-name{
         font-size: 5rem;
         font-weight: 800;
+        @media screen and (max-width: 1439px) {
+            font-size: 4rem;
+        }
+
+        @media screen and (max-width: 1023px) {
+            font-size : 2rem;
+        }
     }
 
     &--cta{
@@ -37,8 +87,24 @@
             font-size: 2rem;
             font-weight: 600;
             letter-spacing: 2px;
+            padding: 2rem;
+            min-width: 5rem;
             cursor: pointer;
             transition: all .3s $ease-in-out;
+
+            @media screen and (max-width: 1439px) {
+                font-size: 1.3rem;
+            }
+
+            @media screen and (max-width: 1023px) {
+                font-size : 1rem;
+                padding: 1rem;
+            }
+
+            @media screen and (max-width: 303px) {
+                padding: 0.7rem;
+                font-size: 0.8rem;
+            }
 
             &:hover{
                 background-color: $color-white;
@@ -49,6 +115,13 @@
             &>*{
                 &:first-child{
                     margin-right: 1rem;
+                    @media screen and (max-width: 796px) {
+                        font-size: 1.4rem;
+                    }
+                }
+
+                &:last-child{
+                    flex: 1;
                 }
             }
         }
@@ -57,13 +130,11 @@
     &--listen{
         border: 2px solid $color-green;
         background-color: $color-green;
-        margin-right: 1rem;
-        padding: 2rem;
+        margin-right: 1rem; 
     }
 
     &--share{
         background-color: transparent;
         border: 2px solid $color-white;
-        padding : 2rem;
     }
 }
