start creating the tray component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
 <div class="home-container">
     <app-album-banner></app-album-banner>
+    <app-spacer></app-spacer>
+    <app-platforms-tray></app-platforms-tray>
 </div>
