create component for streaming platform tray

--- a/src/app/shared/components/platforms-tray/platforms-tray.component.html
+++ b/src/app/shared/components/platforms-tray/platforms-tray.component.html
@@ -1,4 +1,9 @@
 <div class="platform-tray--container">
     <div class="u-title">{{"stream it your way" | uppercase}}</div>
-    
+    <div class="platform-tray--platforms">
+        <a *ngFor="let platform of platforms; let i = index" class="platform-tray--platform">
+            <img class="platform-tray--icon" [src]="platform.url" [alt]="platform.alt" [title]="platform.title">
+            <span class="platform-tray--label" *ngIf="i === 0">Player</span>
+        </a>
+    </div>
 </div>
