--- a/src/app/shared/components/platforms-tray/platforms-tray.component.scss
+++ b/src/app/shared/components/platforms-tray/platforms-tray.component.scss
@@ -1,4 +1,5 @@
 @import "src/scss/abstracts/variable";
+@import "src/scss/shared/utils";
 
 .platform-tray{
     &--container{
@@ -16,12 +17,20 @@
         justify-content: center;
         flex-direction: row;
         border: 1px solid $color-white;
-        padding: 2rem;
+        padding: 3rem;
+        
         cursor: pointer;
+
+        &--container{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
     }
 
     &--icon{
-        width: 4rem;
+        width: 2.5rem;
     }
 
     &--label{
