--- a/src/app/shared/components/platforms-tray/platforms-tray.component.scss
+++ b/src/app/shared/components/platforms-tray/platforms-tray.component.scss
@@ -9,6 +9,10 @@
     &--platforms{
         display: flex;
         margin-top: 7rem;
+
+        @media screen and (max-width: 796px) {
+            margin-top: 5rem;
+        }
     }
 
     &--platform{
@@ -18,6 +22,10 @@
         flex-direction: row;
         border: 1px solid $color-white;
         padding: 3rem;
+
+        @media screen and (max-width: 796px) {
+            padding: 2rem;
+        }
         
         cursor: pointer;
 
@@ -31,6 +39,10 @@
 
     &--icon{
         width: 2.5rem;
+
+        @media screen and (max-width: 796px) {
+            width: 3rem;
+        }
     }
 
     &--label{
