--- a/src/app/shared/components/tooltip/tooltip.component.scss
+++ b/src/app/shared/components/tooltip/tooltip.component.scss
@@ -11,11 +11,15 @@
     text-align: center;
     width : block;
     white-space: nowrap;
-    font-weight: 500;
+    font-weight: 600;
     padding: 1rem;
     top: -100%;
     right: 50%;
     transform: translate(50%, -175%);
+
+    @media screen and (max-width: 796px) {
+        top: -30%;
+    }
     /* Additional styling */
 }
 
@@ -28,4 +32,8 @@
     border-width: 5px; /* Adjust size of the arrow */
     border-style: solid;
     border-color: $color-white transparent transparent transparent; /* Arrow color */
+
+    @media screen and (max-width: 796px) {
+        bottom : -8px;
+    }
 }
