track-list component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,4 +2,6 @@
     <app-album-banner></app-album-banner>
     <app-spacer></app-spacer>
     <app-platforms-tray></app-platforms-tray>
+    <app-spacer></app-spacer>
+    <app-track-list></app-track-list>
 </div>
