--- a/src/scss/shared/_utils.scss
+++ b/src/scss/shared/_utils.scss
@@ -10,8 +10,16 @@
     font-size: 4rem;
     font-weight: 700;
     color : $color-white;
+
+    @media screen and (max-width: 796px) {
+        font-size: 3rem;
+    }
 }
 
 .u-margin-right-sm{
     margin-right: 1rem;
+}
+
+.u-margin-bottom-sm{
+    margin-bottom: 4rem;
 }
