music video section

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,4 +4,6 @@
     <app-platforms-tray></app-platforms-tray>
     <app-spacer></app-spacer>
     <app-track-list></app-track-list>
+    <app-spacer></app-spacer>
+    <app-music-video></app-music-video>
 </div>
