--- a/src/app/shared/components/platforms-tray/platforms-tray.component.scss
+++ b/src/app/shared/components/platforms-tray/platforms-tray.component.scss
@@ -13,6 +13,10 @@
         @media screen and (max-width: 796px) {
             margin-top: 5rem;
         }
+
+        @media screen and (max-width: 469px) {
+            flex-direction: column;
+        }
     }
 
     &--platform{
@@ -25,6 +29,10 @@
 
         @media screen and (max-width: 796px) {
             padding: 2rem;
+        }
+
+        @media screen and (max-width: 469px) {
+            padding: 1.5rem;
         }
         
         cursor: pointer;
@@ -42,6 +50,10 @@
 
         @media screen and (max-width: 796px) {
             width: 3rem;
+        }
+
+        @media screen and (max-width: 469px) {
+            width: 2rem;
         }
     }
 
