--- a/src/app/shared/components/track/track.component.scss
+++ b/src/app/shared/components/track/track.component.scss
@@ -15,6 +15,10 @@
     &>*{
         &:not(:last-child){
             margin-right: 3rem;
+
+            @media screen and (max-width: 469px) {
+                margin-right: 2rem;
+            }
         }
     }
 
@@ -29,6 +33,10 @@
         @media screen and (max-width: 796px) {
             font-size: 2.8rem;
         }
+
+        @media screen and (max-width: 469px) {
+            font-size: 2.2rem;
+        }
     }
 
     &--title{
@@ -36,6 +44,11 @@
         flex-direction: column;
         flex : 1;
         font-weight: 600;
+
+        @media screen and (max-width: 469px) {
+            font-size: 1rem;
+            text-wrap: nowrap;
+        }
     }
 
     &--time{
@@ -46,6 +59,10 @@
         font-size: 3.4rem;
         @media screen and (max-width: 796px) {
             font-size: 2.8rem;
+        }
+
+        @media screen and (max-width: 469px) {
+            font-size: 2.2rem;
         }
     }
 }
