desktop version of footer

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,4 +6,6 @@
     <app-track-list></app-track-list>
     <app-spacer></app-spacer>
     <app-music-video></app-music-video>
+    <app-spacer></app-spacer>
+    <app-footer></app-footer>
 </div>
