--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,44 @@
-<p>footer works!</p>
+<div class="footer-container">
+    <div class="u-separator"></div>
+    
+    <div class="footer-container--upper-content">
+        <nav class="footer-container--nav">
+            <ul>
+                <li><a href="#">About Monstercat</a></li>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">News</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Terms of Service</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+
+            </ul>   
+        </nav>
+        <div class="footer-container--newsletter">
+            <h4 class="footer-container--title">Monstercat news</h4>
+            <p>Don't miss a thing, stay up to date with the latest news from us.</p>
+            <form>
+                <div class="form-group">
+                    <input type="email" placeholder="Enter email" /> 
+                    <button type="submit">
+                        <span class="material-symbols-outlined">
+                            arrow_right_alt
+                        </span>
+                    </button>
+                </div>
+                
+            </form>
+        </div>
+    </div>
+
+    <div class="u-separator"></div>
+
+    <div class="footer-container--upper-content">
+        <div class="footer-container--nav">
+
+        </div>
+        <div class="footer-container--newsletter">
+    
+        </div>
+    </div>
+</div>
