--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import "./scss/abstracts/variable";
 
 // -------------------------------- BASE ----------------------------------------------------
+@import './scss/base/font-face';
 @import './scss/base/reset';
 @import './scss/base/typography';
 
