--- a/src/app/shared/components/album-banner/album-banner.component.scss
+++ b/src/app/shared/components/album-banner/album-banner.component.scss
@@ -37,25 +37,28 @@
     }
 
     &--title{
-        font-size: 6rem;
-        font-weight: 600;
+        font-family: $font-secondary;
+        font-size: 5.5rem;
+        font-weight: 500;
+        letter-spacing: 2px;
         -webkit-text-stroke-width: 1px;
         -webkit-text-stroke-color: #F1F1F1;
         -webkit-text-fill-color: transparent;
         @media screen and (max-width: 1439px) {
-            font-size: 5rem;
+            font-size: 4.3rem;
         }
 
         @media screen and (max-width: 1023px) {
             font-size: 4rem;
         }
 
-        @media screen and (max-width: 1023px) {
-            font-size: 2rem;
+        @media screen and (max-width: 796px) {
+            font-size: 3.2rem;
         }
     }
 
     &--artist-name{
+        font-family: $font-secondary;
         font-size: 5rem;
         font-weight: 800;
         @media screen and (max-width: 1439px) {
@@ -63,7 +66,11 @@
         }
 
         @media screen and (max-width: 1023px) {
-            font-size : 2rem;
+            font-size : 3rem;
+        }
+
+        @media screen and (max-width: 796px) {
+            font-size: 3.2rem;
         }
     }
 
