--- a/src/scss/abstracts/_variable.scss
+++ b/src/scss/abstracts/_variable.scss
@@ -3,6 +3,10 @@ $color-black : #000000;
 $color-blue : #1e90ff;
 $color-green : #50A584;
 $color-grey : #383838;
+$color-lightGray : #898888;
 
 $ease-in-out: cubic-bezier(0.77, 0, 0.175, 1);
 $ease-out-expo: cubic-bezier(0.19, 1, 0.22, 1);
+
+$font-primary: 'Montserrat', sans-serif;
+$font-secondary: 'Monument Extended', Helvetica, sans-serif;
