--- a/src/scss/shared/_utils.scss
+++ b/src/scss/shared/_utils.scss
@@ -7,6 +7,7 @@
 }
 
 .u-title{
+    font-family: 'Monument Extended', 'Montserrat', sans-serif;
     font-size: 4rem;
     font-weight: 700;
     color : $color-white;
@@ -22,4 +23,11 @@
 
 .u-margin-bottom-sm{
     margin-bottom: 4rem;
+}
+
+.u-separator{
+    width : 100%;
+    height: 1px;
+    background-color:  $color-white;
+    margin : 5rem 0;
 }
