--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -33,12 +33,11 @@
 
     <div class="u-separator"></div>
 
-    <div class="footer-container--upper-content">
-        <div class="footer-container--nav">
+    <p class="copyright">2011 - 2023 © Monstercat, All Rights Reserved</p>
 
-        </div>
-        <div class="footer-container--newsletter">
-    
-        </div>
+    <div class="footer-container--acknowledgment">
+        <p>We acknowledge with gratitude the traditional, ancestral and unceded land of the Coast Salish peoples, including the territories of the Sḵwx̱wú7mesh (Squamish), Stó:lō and Səl̓ílwətaʔ/Selilwitulh (Tsleil-Waututh) and xʷməθkʷəy̓əm (Musqueam) Nations, on which Monstercat's Vancouver HQ stands.
+            <br><br>
+            We acknowledge the unceded and ancestral territories of the Gabrielino/Tongva peoples on which our LA team live and work.</p>
     </div>
 </div>
