--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
 <div class="home-container">
+    <app-header></app-header>
     <app-album-banner></app-album-banner>
     <app-spacer></app-spacer>
     <app-platforms-tray></app-platforms-tray>
