--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,9 @@
-<p>header works!</p>
+<div class="header-container">
+    <img src="https://storage.googleapis.com/monstercat/monstercat-logo.webp" alt="logo">
+    <div class="header-container--search">
+        <span text="" (mouseover)="tooltip.show()" (mouseout)="tooltip.hide()" class="material-symbols-outlined">
+            search
+        </span>
+        <app-tooltip #tooltip text="search for any song by clicking here"></app-tooltip>
+    </div>
+</div>
