create search pages

--- a/src/app/pages/search/search.component.html
+++ b/src/app/pages/search/search.component.html
@@ -1,4 +1,13 @@
 <div class="search-container">
-    Hello
-    <a [routerLink]="['/']">home</a>
+    <div class="search-container--search-group">
+        <h2 class="search-title">
+            Search...
+        </h2>
+        <div class="search-container--form-group">
+           <input class="search-bar" type="text" placeholder="search..."/>
+           <span class="material-symbols-outlined search-icon">
+            search
+           </span>
+        </div>
+    </div>
 </div>
