update search background image

--- a/src/app/pages/search/search.component.scss
+++ b/src/app/pages/search/search.component.scss
@@ -6,8 +6,9 @@
                     rgba(0, 0, 0, 0.9), /* Black with 50% opacity */
                     rgba(0, 0, 0, 0.9)  /* You can adjust the opacity as needed */
                 ),
-                url('../../../assets/images/banner-image.jpeg'); /* Path to your image */
+                url('../../../assets/images/bg-search.jpg'); /* Path to your image */
     background-size: cover;
+    background-position: 100% 30%;
     color: #fff;
     position: relative;
 
