--- a/src/app/pages/search/search.component.scss
+++ b/src/app/pages/search/search.component.scss
@@ -3,8 +3,8 @@
 .search-container{
     min-height: 100vh;
     background: linear-gradient(
-                    rgba(0, 0, 0, 0.9), /* Black with 50% opacity */
-                    rgba(0, 0, 0, 0.9)  /* You can adjust the opacity as needed */
+                    rgba(0, 0, 0, 0.96), /* Black with 50% opacity */
+                    rgba(0, 0, 0, 0.96)  /* You can adjust the opacity as needed */
                 ),
                 url('../../../assets/images/bg-search.jpg'); /* Path to your image */
     background-size: cover;
@@ -14,10 +14,16 @@
 
     &--search-group{
         display: flex;
-        align-items: center;
-        justify-content: center;
         flex-direction: column;
-        height: 100vh;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%);
+        transition: all .5s ease-in-out;
+
+        &.moveUp{
+            top: 20%;
+        }
     }
 
     &--form-group{
@@ -25,25 +31,25 @@
         align-items: center;
     }
 
-    .search-title{
-        margin-bottom: 5rem;
-        font-size: 4rem;
-        font-family: $font-secondary;
-        text-transform: uppercase;
-    }
+    // .search-title{
+    //     margin-bottom: 5rem;
+    //     font-size: 4rem;
+    //     font-family: $font-secondary;
+    //     text-transform: uppercase;
+    // }
 
     .search-bar{
-        padding : 1.55rem 2rem;
+        padding : 2.2rem 2.6rem;
         width: 50rem;
         border : none;
         outline: none;
-        font-size: 1.6rem;
+        font-size: 1.9rem;
     }
 
     .search-icon{
         display: flex;
         border: 1px solid $color-white;
-        padding: 1.2rem;
+        padding: 2.05rem;
         cursor: pointer;
     }
 }
